c1-eks/sc_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    namespace: "default"
    name: "deepsecurity-smartcheck-ingress"
    annotations:
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/target-type: ip
        alb.ingress.kubernetes.io/backend-protocol: HTTPS
        alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
        alb.ingress.kubernetes.io/certificate-arn: <insert_certificate_arn_here>
    labels:
        app: deepsecurity-smartcheck-ingress
spec:
    ingressClassName: alb
    rules:
    - http:
        paths:
        - path: /
            pathType: Prefix
            backend:
                service:
                    name: proxy
                    port:
                        number: 443
